# hhi-registration

./: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  yaml
.github/workflows/: build-tauri.yml
public/: 404.html
src/: App.tsx  App.tsx~  index.css
src-tauri/: Cargo.toml  index.html   tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DateInput.tsx  Navigation.tsx
src/pages/: Analytics.tsx  Dashboard.tsx  DataPrivacy.tsx  EditMember.tsx  MemberProfile.tsx  MemberRegistration.tsx  MembersList.tsx  SpecialRegistry.tsx
src/types/: Member.ts
src/utils/: ageGroupAssignment.ts  dataPrivacy.ts  exportUtils.ts  storage.ts
