[package]
name = "app"
version = "0.1.0"
description = "HHI Registration"
authors = ["you"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1"
chrono = "0.4"
directories-next = "2"

[features]
# required by tauri v1 template
custom-protocol = ["tauri/custom-protocol"]
